# pseudo-business

./: .gitignore  COMPREHENSIVE_CODE_REVIEW_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  ENGINEERING_DOCS.md  IMPLEMENTATION_ROADMAP.md  README.md  TESTING_REPORT.md  TODO.md  alembic.ini  end_to_end_test_report.json  final_validation.py  implementation_roadmap.md  potential_implementation roadmap.md  requirements.txt  run_core_tests.py  run_e2e_tests.py  setup.sh  start.sh  start_platform.py  test_api_simulation.py  test_end_to_end.py  test_report.json
agentic-ai-company/: pyproject.toml  requirements.txt
agentic-ai-company/config/: orchestrator.yml
agentic-ai-company/src/evolution/: openevolve_integration.py
agentic-ai-company/src/orchestrator/: integration_testing.py  master_agent.py  nlp_processor.py
agentic-ai-company/tests/orchestrator/: test_master_orchestrator.py
alembic/: env.py
api-gateway/: index.js  (+3 more)
backend_agent/: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
backend_agent/backend_agent/: __init__.py  auth.py  crud.py  dependencies.py  docs.py  main.py  middleware.py  models.py  optimization.py
backend_agent/backend_agent/database/: __init__.py  base.py  crud.py  models.py  session.py
backend_agent/backend_agent/middleware/: __init__.py  auth.py  error_handler.py
backend_agent/backend_agent/routers/: __init__.py  agents.py  auth.py  health.py  items.py  projects.py  tasks.py
backend_agent/backend_agent/services/: __init__.py  agent_service.py  orchestrator_service.py  project_service.py  task_service.py
backend_agent/backend_agent/tests/: __init__.py  test_auth.py  test_crud.py  test_main.py  test_routers.py
devops_agent/: README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
devops_agent/devops_agent/: __init__.py  __main__.py  cli.py
devops_agent/devops_agent/ci_cd/: __init__.py  pipeline_manager.py
devops_agent/devops_agent/containerization/: __init__.py  docker_manager.py
devops_agent/devops_agent/monitoring/: __init__.py  prometheus_manager.py
devops_agent/devops_agent/terraform/: __init__.py  terraform_manager.py
evolution_engine/: .dockerignore  .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt  setup.py  test_evolution.py
evolution_engine/evolution_engine/: __init__.py  __main__.py  cli.py  code_variant.py  evolution_engine.py  fitness_evaluator.py  mutation_operator.py  selection_mechanism.py
evolution_engine/evolution_engine/tests/: __init__.py  test_ast_utils.py  test_code_variant.py  test_evolution_engine.py  test_fitness_evaluator.py  test_mutation_operator.py  test_selection_mechanism.py
evolution_engine/evolution_engine/utils/: __init__.py  ast_utils.py
testing_agent/: README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
testing_agent/testing_agent/: __init__.py  __main__.py  agent.py  ci_integration.py  cli.py  coverage_analyzer.py  security_scanner.py  test_generator.py
testing_agent/testing_agent/integration_tests/: README.md  __init__.py  requirements.txt  run_tests.sh  test_runner.py
testing_agent/testing_agent/integration_tests/config/: config.py  docker-compose.yml  mockserver-config.json  mockserver.properties
testing_agent/testing_agent/integration_tests/fixtures/data/: requirements.json
testing_agent/testing_agent/integration_tests/reports/: test_summary.md
testing_agent/testing_agent/integration_tests/utils/: __init__.py  base_test.py  performance_monitor.py  test_client.py
testing_agent/testing_agent/integration_tests/workflows/: __init__.py  test_component_integrations.py  test_end_to_end_workflows.py
testing_agent/tests/: __init__.py  test_agent.py  test_ci_integration.py  test_coverage_analyzer.py  test_security_scanner.py  test_test_generator.py
(+120 files in other folders)
