[project]
name = "agentic-ai-company"
version = "0.1.0"
description = "An agentic AI system for creating and deploying SaaS applications."
requires-python = ">=3.12"
dependencies = [
    # Core framework
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "redis",
    "celery",

    # AI/ML
    "openai",
    "transformers",
    "numpy",
    "pandas",
    "scikit-learn",

    # Web development
    "requests",
    "aiohttp",
    "websockets",
    "jinja2",

    # Database
    "psycopg2-binary",
    "asyncpg",
    
    # Utilities
    "python-dotenv",
    "click",
    "rich",
    "typer",
    "PyYAML",
    "croniter",
    "huggingface_hub",

    # Deployment - Relaxing version to let uv resolve conflicts
    "kubernetes",
    "docker",
    "ansible",

    # Monitoring
    "prometheus-client",
    "structlog"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
]
