[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-agent"
version = "0.1.0"
description = "Backend Agent for the Agentic AI Development Platform"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["fastapi", "backend", "agent"]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.19.1",
    "httpx>=0.23.0"
]

[tool.setuptools.packages.find]
where = ["backend_agent"]

[tool.black]
line-length = 88
target-version = ['py310']
include-trailing-comma = true

[tool.isort]
profile = "black"
lines_after_imports = 2
force_single_line_imports = true
src_paths = ["backend_agent"]