[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops_agent"
version = "0.1.0"
description = "DevOps Agent for Agentic AI Development Platform"
authors = [
    {name = "Team B", email = "team-b@pseudo-business.com"},
]
requires-python = ">=3.11"
dependencies = [
    "docker>=6.0.0",
    "boto3>=1.26.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-terraform>=0.10.1",
    "prometheus-client>=0.16.0",
    "elasticsearch>=8.6.0",
    "kubernetes>=26.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.messages_control]
disable = "C0111"