[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "evolution-engine"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
description = "Evolution Engine for code optimization using evolutionary algorithms"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["astor"]

[project.scripts]
evolution-engine = "evolution_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]